--- a/navbar.html
+++ b/navbar.html
@@ -94,7 +94,7 @@
 <!-- Horizontal Top Navbar -->
 
 <div class="top-navbar">
-    <h1>AI Webinar Participants</h1>
+    <h1>DBMS Mini-Project on CRUD operations</h1>
     <a href="admin.php" class="login" >Login</a>
 </div>
 
