--- a/inner_navbar.html
+++ b/inner_navbar.html
@@ -93,7 +93,7 @@
 
 <!-- Horizontal Top Navbar -->
 <div class="top-navbar">
-    <h1>AI Webinar Participants</h1>
+    <h1>DBMS Mini-Project on CRUD operations</h1>
     <a href="admin.php" class="login">Logout</a>
 </div>
 
