--- a/inner_navbar.html
+++ b/inner_navbar.html
@@ -99,7 +99,7 @@
 
 <!-- Vertical Sidebar Navbar -->
 <div class="sidebar">
-    <a href="login.php" class="active">Insert</a>
+    <a href="insert.php" class="active">Insert</a>
 </div>
 
 </body>
